Db context injected

--- a/EFExamples/appsettings.json
+++ b/EFExamples/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=CarOwners;User Id=hacker;Password=hacker;"
+    "DefaultConnection": "Server=localhost;Database=CarOwners;User Id=hacker;Password=hacker;"
   }
 }
