Many changes at once

--- a/XMLExamples/XMLExamples.csproj
+++ b/XMLExamples/XMLExamples.csproj
@@ -12,6 +12,9 @@
     <None Update="Person.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="PurchaseOrder.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
